ui fixes for signup and client home btn wrap alerts

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -2684,7 +2684,7 @@ hr { margin-top: 60px;}
 .formpage-block {
   //background: rgba(255,255,255,.1);
   @include mobile-only {background: none;};
-  padding: 20px;
+  padding-top: 20px;
   margin-bottom: 20px;
   color: white;
   .header {
@@ -4123,8 +4123,9 @@ ul.spotternav li {
   .dropdown-toggle, .btn-group > .btn:first-child, div.btn-group > button {
     font-size: 21px;
     //padding: 1px;
-    margin-left: 5px;
-    padding-top: 12px;
+    margin-left: 10px;
+    padding: 6px;
+    margin-top: 17px;
   }
 }
 
